Bug 244608 - Knode crashes when deleting a group specific identity
Summary: Knode crashes when deleting a group specific identity
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 14:11 UTC by Davide Ferrari
Modified: 2010-09-05 00:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Ferrari 2010-07-14 14:11:31 UTC
Application: knode (4.4.2)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-22-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
I've set a specific identity in a group and now when I try to remove it by empting the nickname/mail fields. When I press ok to confirm this change, KNode crashes.

The crash can be reproduced every time.

 -- Backtrace:
Application: KNode (knode), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f032a20b780 (LWP 4543))]

Thread 2 (Thread 0x7f030de9b710 (LWP 4546)):
#0  0x00007f0327082f53 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f03200f64a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f03200f68fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f03277d6566 in QEventDispatcherGlib::processEvents (this=0x1e6f490, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007f03277ab992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f03277abd6c in QEventLoop::exec (this=0x7f030de9ad90, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f03276b5d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007f032778c178 in QInotifyFileSystemWatcherEngine::run (this=0x21e5d80) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f03276b8775 in QThreadPrivate::start (arg=0x21e5d80) at thread/qthread_unix.cpp:248
#9  0x00007f0326d929ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007f032708f6cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f032a20b780 (LWP 4543)):
[KCrash Handler]
#5  QByteArray::constData (this=0x402e600) at /usr/include/qt4/QtCore/qbytearray.h:415
#6  QString::operator= (this=0x402e600) at /usr/include/qt4/QtCore/qstring.h:421
#7  KNode::IdentityWidget::save (this=0x402e600) at ../../knode/knconfigwidgets.cpp:231
#8  0x00007f032933daec in KNGroupPropDlg::slotOk (this=0x1fc9ce0) at ../../knode/kngrouppropdlg.cpp:193
#9  0x00007f03292fb3f0 in KNGroupPropDlg::qt_metacall (this=0x1fc9ce0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>) at moc_kngrouppropdlg.cpp:72
#10 0x00007f03277bfe3f in QMetaObject::activate (sender=0x1fc9ce0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#11 0x00007f0328dfc4b8 in KDialog::slotButtonClicked (this=0x1fc9ce0, button=4) at ../../kdeui/dialogs/kdialog.cpp:862
#12 0x00007f0328dfe329 in KDialog::qt_metacall (this=0x1fc9ce0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3d5f3bf0) at ./kdialog.moc:190
#13 0x00007f0328ec57c0 in KPageDialog::qt_metacall (this=0x7f0327326e40, _c=24, _id=0, _a=0x0) at ./kpagedialog.moc:70
#14 0x00007f03292fb3d8 in KNGroupPropDlg::qt_metacall (this=0x7f0327326e40, _c=24, _id=0, _a=0x0) at moc_kngrouppropdlg.cpp:67
#15 0x00007f03277bfe3f in QMetaObject::activate (sender=0x3fe6be8, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#16 0x00007f03277c515e in QSignalMapper::mapped (this=0x7f0327326e40, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:101
#17 0x00007f03277c6372 in QSignalMapper::map (this=0x3fe6be8, sender=0x40303a0) at kernel/qsignalmapper.cpp:266
#18 0x00007f03277c65f0 in QSignalMapper::qt_metacall (this=0x3fe6be8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3d5f3d80) at .moc/release-shared/moc_qsignalmapper.cpp:87
#19 0x00007f03277bfe3f in QMetaObject::activate (sender=0x40303a0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#20 0x00007f032881c5f2 in QAbstractButton::clicked (this=0x7f0327326e40, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#21 0x00007f032853686b in QAbstractButtonPrivate::emitClicked (this=0x3fc6e80) at widgets/qabstractbutton.cpp:546
#22 0x00007f032853770b in QAbstractButtonPrivate::click (this=0x3fc6e80) at widgets/qabstractbutton.cpp:539
#23 0x00007f032853797c in QAbstractButton::mouseReleaseEvent (this=0x40303a0, e=0x7fff3d5f46d0) at widgets/qabstractbutton.cpp:1121
#24 0x00007f03281d7582 in QWidget::event (this=0x40303a0, event=0x7fff3d5f46d0) at kernel/qwidget.cpp:7998
#25 0x00007f032818122c in QApplicationPrivate::notify_helper (this=0x1c64f30, receiver=0x40303a0, e=0x7fff3d5f46d0) at kernel/qapplication.cpp:4300
#26 0x00007f0328187ecb in QApplication::notify (this=0x7fff3d5f6e10, receiver=0x40303a0, e=0x7fff3d5f46d0) at kernel/qapplication.cpp:3865
#27 0x00007f0328e8c526 in KApplication::notify (this=0x7fff3d5f6e10, receiver=0x40303a0, event=0x7fff3d5f46d0) at ../../kdeui/kernel/kapplication.cpp:302
#28 0x00007f03277ad06c in QCoreApplication::notifyInternal (this=0x7fff3d5f6e10, receiver=0x40303a0, event=0x7fff3d5f46d0) at kernel/qcoreapplication.cpp:704
#29 0x00007f03281870ae in QCoreApplication::sendEvent (receiver=0x40303a0, event=0x7fff3d5f46d0, alienWidget=0x40303a0, nativeWidget=0x1fc9ce0, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QApplicationPrivate::sendMouseEvent (receiver=0x40303a0, event=0x7fff3d5f46d0, alienWidget=0x40303a0, nativeWidget=0x1fc9ce0, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:2965
#31 0x00007f0328206f65 in QETWidget::translateMouseEvent (this=0x1fc9ce0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4368
#32 0x00007f03282058ac in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff3d5f4ff0) at kernel/qapplication_x11.cpp:3501
#33 0x00007f0328231882 in x11EventSourceDispatch (s=0x1c6d4b0, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x00007f03200f28c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#35 0x00007f03200f6748 in ?? () from /lib/libglib-2.0.so.0
#36 0x00007f03200f68fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#37 0x00007f03277d6513 in QEventDispatcherGlib::processEvents (this=0x1c32d70, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#38 0x00007f032823146e in QGuiEventDispatcherGlib::processEvents (this=0x7f0327326e40, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00007f03277ab992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#40 0x00007f03277abd6c in QEventLoop::exec (this=0x7fff3d5f5320, flags=) at kernel/qeventloop.cpp:201
#41 0x00007f032864b09e in QDialog::exec (this=0x1fc9ce0) at dialogs/qdialog.cpp:546
#42 0x00007f032932e1bf in KNGroup::showProperties (this=0x2035980) at ../../knode/kngroup.cpp:1062
#43 0x00007f03293992e5 in KNMainWidget::slotGrpProperties (this=0x1df7090) at ../../knode/knmainwidget.cpp:1469
#44 0x00007f032939b19d in KNMainWidget::qt_metacall (this=0x1df7090, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3d5f5520) at ./knmainwidget.moc:254
#45 0x00007f03277bfe3f in QMetaObject::activate (sender=0x20762b0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#46 0x00007f032817b032 in QAction::triggered (this=0x7f0327326e40, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#47 0x00007f032817d0ab in QAction::activate (this=0x20762b0, event=<value optimized out>) at kernel/qaction.cpp:1255
#48 0x00007f03285bc39d in QMenuPrivate::activateCausedStack (this=<value optimized out>, causedStack=..., action=0x20762b0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1011
#49 0x00007f03285c1dda in QMenuPrivate::activateAction (this=0x2151f20, action=0x20762b0, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1103
#50 0x00007f0328f68cee in KMenu::mouseReleaseEvent (this=0x2151540, e=0x18) at ../../kdeui/widgets/kmenu.cpp:471
#51 0x00007f03281d7582 in QWidget::event (this=0x2151540, event=0x7fff3d5f6170) at kernel/qwidget.cpp:7998
#52 0x00007f03285c3f9b in QMenu::event (this=0x2151540, e=0x7fff3d5f6170) at widgets/qmenu.cpp:2414
#53 0x00007f032818122c in QApplicationPrivate::notify_helper (this=0x1c64f30, receiver=0x2151540, e=0x7fff3d5f6170) at kernel/qapplication.cpp:4300
#54 0x00007f0328187ecb in QApplication::notify (this=0x7fff3d5f6e10, receiver=0x2151540, e=0x7fff3d5f6170) at kernel/qapplication.cpp:3865
#55 0x00007f0328e8c526 in KApplication::notify (this=0x7fff3d5f6e10, receiver=0x2151540, event=0x7fff3d5f6170) at ../../kdeui/kernel/kapplication.cpp:302
#56 0x00007f03277ad06c in QCoreApplication::notifyInternal (this=0x7fff3d5f6e10, receiver=0x2151540, event=0x7fff3d5f6170) at kernel/qcoreapplication.cpp:704
#57 0x00007f03281870ae in QCoreApplication::sendEvent (receiver=0x2151540, event=0x7fff3d5f6170, alienWidget=0x0, nativeWidget=0x2151540, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#58 QApplicationPrivate::sendMouseEvent (receiver=0x2151540, event=0x7fff3d5f6170, alienWidget=0x0, nativeWidget=0x2151540, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, 
    spontaneous=true) at kernel/qapplication.cpp:2965
#59 0x00007f03282073dd in QETWidget::translateMouseEvent (this=0x2151540, event=<value optimized out>) at kernel/qapplication_x11.cpp:4302
#60 0x00007f03282058ac in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff3d5f6a90) at kernel/qapplication_x11.cpp:3501
#61 0x00007f0328231882 in x11EventSourceDispatch (s=0x1c6d4b0, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#62 0x00007f03200f28c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#63 0x00007f03200f6748 in ?? () from /lib/libglib-2.0.so.0
#64 0x00007f03200f68fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#65 0x00007f03277d6513 in QEventDispatcherGlib::processEvents (this=0x1c32d70, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#66 0x00007f032823146e in QGuiEventDispatcherGlib::processEvents (this=0x7f0327326e40, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#67 0x00007f03277ab992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#68 0x00007f03277abd6c in QEventLoop::exec (this=0x7fff3d5f6dc0, flags=) at kernel/qeventloop.cpp:201
#69 0x00007f03277afaab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#70 0x00000000004079e6 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../knode/main.cpp:44

Reported using DrKonqi
Comment 1 Olivier Trichet 2010-09-05 00:09:40 UTC
SVN commit 1171701 by otrichet:

Do not call first() on an empty list

Fix a crash when the signing key was resetted in the identity configuration.
BUG: 244608


 M  +4 -0      knconfigwidgets.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171701