Do not call first() on an empty list

Fix a crash when the signing key was resetted in the identity configuration.
BUG: 244608

svn path=/branches/KDE/4.4/kdepim/; revision=1171701